adding support for mysql to gitea and persist data

--- a/prod/down.yaml
+++ b/prod/down.yaml
@@ -5,6 +5,12 @@
     kubernetes.core.k8s:
       state: absent
       src: mysql.yaml
+  - name: Remove gitea release and waiting suppression ending
+    kubernetes.core.helm:
+      name: gitea
+      release_namespace: default
+      state: absent
+      wait: true
   - name: "remove kubernetes python package"
     pip:
       name: kubernetes
