--- a/prod/up.yaml
+++ b/prod/up.yaml
@@ -9,3 +9,10 @@
     kubernetes.core.k8s:
       state: present
       src: mysql.yaml
+  - name: Deploy latest version of gitea
+    kubernetes.core.helm:
+      name: gitea
+      chart_ref: gitea-charts/gitea
+      release_namespace: default
+      values_files:
+      - values.yaml
